Bug 1135764 - Make sure XSLT transform results have a document timeline so things like transitions will work. r=smaug, a=lmandel