dom/xslt/tests/mochitest/file_bug1135764.xsl
@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+
+<xsl:output method="html"
+            indent="yes"
+            version="5.0"
+            doctype-system="about:legacy-compat"/>
+
+<xsl:template match="/">
+<html>
+<head>
+</head>
+  <body>
+    Some text
+  </body>
+</html>
+</xsl:template>
+
+</xsl:stylesheet>
